# neml2

./: .clang-tidy  .gitignore  .gitmodules  .jupytext.toml  .pre-commit-config.yaml  AGENTS.md  AI_WORKFLOW.md  AdvectiveStress_8h_source.html  AnisotropicElasticity_8h_source.html  ArrheniusParameter_8h_source.html  Assembler_8h_source.html  AssociativeIsotropicPlasticHardening_8h_source.html  AssociativeJ2FlowDirection_8h_source.html  AssociativeKinematicPlasticHardening_8h_source.html  AssociativePlasticFlow_8h_source.html  AvramiErofeevNucleation_8h_source.html  BackwardEulerTimeIntegration_8h_source.html  BilinearInterpolation_8h_source.html  BrooksCoreyCapillaryPressure_8h_source.html  BufferStore_8h_source.html  CLAUDE.md  CLAUDE_WORKFLOW.md  CMakeLists.txt  CMakePresets.json  CapillaryPressure_8h_source.html  CenterTensor_8h_source.html  ChabochePlasticHardening_8h_source.html  ChemicalReactionMechanism_8h_source.html  ComposedModel_8h_source.html  ConstantParameter_8h_source.html  ConstantTensors_8h_source.html  ContractingGeometry_8h_source.html  CopyVariable_8h_source.html  CrackGeometricFunctionAT1_8h_source.html  CrackGeometricFunctionAT2_8h_source.html  CrackGeometricFunction_8h_source.html  CrystalGeometry_8h_source.html  CrystalMean_8h_source.html  CubicCrystal_8h_source.html  CubicElasticityConverter_8h_source.html  (+1398 more)
benchmark/: CMakeLists.txt  README.md  _env.py  _stats.py  analyze.py  plot_throughput.json  plot_throughput.py  run.py  run_benchmark.py  sweep.py
benchmark/chaboche12/: model.i
benchmark/chaboche12_gmres/: model.i
benchmark/chaboche12gmres/: model.i
benchmark/chaboche2/: model.i
benchmark/chaboche4/: model.i
benchmark/chaboche6/: model.i
benchmark/elasticity/: model.i
benchmark/gtntheig/: model.i
benchmark/isoharden/: model.i
benchmark/mxpc/: model.i
benchmark/radret/: model.i
benchmark/scpcoup/: model.i
benchmark/scpcoupmult/: model.i
benchmark/scpdecoup/: model.i
benchmark/scpdecoupexp/: model.i
benchmark/tcprandom/: model.i
benchmark/tcpsingle/: model.i
cmake/hit/: CMakeLists.txt
doc/: .gitignore  CMakeLists.txt  conf.py  index.md  syntax.cxx
doc/_ext/: colab_button.py  neml2_syntax.py
doc/ai-specifications/: finite_volume.md  transport.md
doc/chatbot/: README.md
doc/config/: Doxyfile.in  DoxygenLayout.xml  DoxygenLayoutPython.xml  HTML.in  Python.in  custom.css  header.html  mathjax.js
doc/content/: benchmark.md  chatbot.md  cli_utilities.md  contributing.md  faq.md  getting_started.md  input.i  install.md  pipeline.md  tensor_types.md
doc/instructions/: kwn.md
doc/js/: .gitignore
doc/scripts/: build.sh  check_doc_render.py  check_notebook_executed.py  deploy_versioned.sh  examples.py  fixup_pystub.py  gen_layout.py  genhtml.py  layout.py  lightweight_check.py  listing.py  postprocess.py  preprocess.py  syntax_to_md.py  update_content.py  utils.py
doc/tutorials/: contributing.md  getting_started.md  tutorials.md
python/: CMakeLists.txt  annotated.html  classcore_1_1Factory.js  classcore_1_1LabeledAxis-members.html  classcore_1_1LabeledAxis.html  classcore_1_1LabeledAxis.js  classcore_1_1LabeledAxisAccessor-members.html  classcore_1_1LabeledAxisAccessor.html  classcore_1_1MatrixAssembler-members.html  classcore_1_1MatrixAssembler.html  classcore_1_1Model-members.html  classcore_1_1Model.html  classcore_1_1TensorValue-members.html  classcore_1_1TensorValue.html  classcore_1_1VariableName-members.html  classcore_1_1VectorAssembler-members.html  classcore_1_1VectorAssembler.html  classinterface_1_1NEML2PyzagModel-members.html  classinterface_1_1NEML2PyzagModel.html  classneml2_1_1core_1_1Factory-members.html  classneml2_1_1core_1_1Factory.html  classneml2_1_1core_1_1LabeledAxis-members.html  classneml2_1_1core_1_1LabeledAxis.html  classneml2_1_1core_1_1Model.html  classneml2_1_1core_1_1NonlinearSystem-members.html  classneml2_1_1core_1_1NonlinearSystem.html  classneml2_1_1core_1_1NonlinearSystem.js  classneml2_1_1core_1_1TensorValue.html  classneml2_1_1core_1_1VariableName-members.html  classneml2_1_1core_1_1VariableName.html  classneml2_1_1core_1_1VariableName.js  classneml2_1_1postprocessing_1_1odf_1_1DeLaValleePoussinKernel-members.html  classneml2_1_1postprocessing_1_1odf_1_1DeLaValleePoussinKernel.html  classneml2_1_1postprocessing_1_1odf_1_1DeLaValleePoussinKernel__inherit__graph.map  classneml2_1_1postprocessing_1_1odf_1_1DeLaValleePoussinKernel__inherit__graph.md5  classneml2_1_1postprocessing_1_1odf_1_1KDEODF-members.html  classneml2_1_1postprocessing_1_1odf_1_1KDEODF.html  classneml2_1_1postprocessing_1_1odf_1_1KDEODF.js  classneml2_1_1postprocessing_1_1odf_1_1KDEODF__inherit__graph.map  classneml2_1_1postprocessing_1_1odf_1_1Kernel-members.html  (+501 more)
python/examples/: README.md  crystal.i  demo_model.i  deterministic.ipynb  deterministic.md  explain.ipynb  explain.md  polefigures.ipynb  statistical.ipynb  statistical.md
python/neml2/: __init__.py  _cli.py  _stub.py  core.cxx  crystallography.cxx  macros.h  math.cxx  module_core.cxx  module_tensors.cxx  requirements.txt  reserved.cxx  tensors.cxx  types.h
python/search/: all_1.js  all_10.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  functions_0.js  pages_3.js  (+20 more)
runner/: CMakeLists.txt
server/: CMakeLists.txt
tests/: CMakeLists.txt  conftest.py  test_alignment.py  test_aoti_export.py  test_calibration.py  test_chain_rule_2.py  test_chain_rule_sparsity.py  test_cli_extensions.py  test_crystal_plasticity.py  test_equation_systems.py  test_export.py  test_factory.py  test_finite_volume.py  test_guard.py  test_implicit_update.py  test_linear_isotropic_elasticity.py  test_model.py  test_model_package_split.py  test_module.py  test_normality.py  test_primitive_tensor.py  test_region_views.py  test_schur.py  test_solvers.py  test_sub_batch_aoti_meta.py  test_sub_batch_factory.py  test_sub_batch_layout.py  test_sub_batch_shape.py  test_syntax_cli.py  test_tensor_exprs.py  test_types_scalar.py  test_types_sr2.py  test_types_ssr4.py
(+57589 files in other folders)
